fix_static_files

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>CSV Upload</title>
+    <title>PickUp チェッカー</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <h1>CSVファイルをアップロード</h1>
-    <form id="upload-form">
-        <input type="file" id="file-input" name="file" accept=".csv" required />
-        <button type="submit">アップロード</button>
-    </form>
-    <p id="status"></p>
+    <div class="card">
+        <h1>PickUP チェッカー</h1>
+        <p>Magentから抽出したCSVファイルを<br>アップロードしてください</p>
+        <form id="upload-form">
+            <label for="file-input" class="file-label">ファイルを選択</label>
+            <input type="file" id="file-input" name="file" accept=".csv" required />
+            <div id="file-name">選択されていません</div>
+            <button type="submit" id="upload-button">ファイルを処理</button>
+        </form>
+        <p id="status"></p>
+    </div>
     <script src="/static/app.js"></script>
 </body>
 </html>
